@@ -29,6 +29,7 @@ v30.0.00
     Changes With Important Notices
 
     Tweaks & Additions
+        Individual Needs: enabled viewing IN records for past students as read-only
         Messenger: enabled resending to any recipient when read receipts are off in Send Report
         Reports: updated Attendance data source to handle Off Timetable days where no attendance is taken
         Reports: prevented deletion of template assets that are not set to inactive
